tests/ui/issues/issue-2151.rs
fn main() {
    let x = panic!(); //~ ERROR type annotations needed
    x.clone();
}
